# cultivo-server

./: .dockerignore  .env.example  .env.production.example  .gitignore  AUDIT_REPORT.md  BACKLOG.md  CHANGES.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  GUIA-USUARIO.md  PLAYBOOK.md  README-SERVER.md  README.md  STATUS.md  UI-SHARED-NOTES.md  UX_DESIGN_REPORT.md  capacitor.config.ts  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  schema-create.sql  seed-alerts.mjs  seed-extra.mjs  seed.mjs  todo.md  vite.config.ts  vitest.config.ts
.claude/: launch.json  start-dev.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  firmware-release.yml
.manus/db/: db-query-1772203842455.json  db-query-1772203845252.json  db-query-1772203873498.json  db-query-1772203876943.json  db-query-1772204619146.json  db-query-1772204639078.json  db-query-1772212690192.json  db-query-1772212704132.json  db-query-1772228562127.json  db-query-1772228566078.json  db-query-1772229022171.json  db-query-1772229334478.json  db-query-1772229966359.json  db-query-error-1772203864834.json  db-query-error-1772212685670.json  db-query-error-1772212698422.json  db-query-error-1772229349522.json  db-query-error-1772245627043.json
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
client/: index.html
client/public/: manifest.json  sw.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AdBanner.tsx  AddToHomeScreenPrompt.tsx  AdvancedTourGuide.tsx  AlertSettings.tsx  AlertsWidget.tsx  AnalyticsCharts.tsx  AnimatedButton.tsx  BigStepper.tsx  BottomNav.tsx  Breadcrumb.tsx  CannaPruneCanvas.tsx  ConflictFreeSlider.tsx  CreateTentModal.tsx  CyclesDashboard.tsx  DashboardLayoutSkeleton.tsx  DeleteAccountDialog.tsx  DeleteConfirmDialog.tsx  DeleteTentDialog.tsx  EdgeActionMenu.tsx  EditCycleModal.tsx  EditHealthLogDialog.tsx  EditLogDialog.tsx  EditTentDialog.tsx  EmptyOnboarding.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  FertilizationCalculator.tsx  FinishCloningDialog.tsx  GardenStreakBadge.tsx  GardenXpBar.tsx  HarvestCelebration.tsx  HarvestConfirmationDialog.tsx  HomeLoadingState.tsx  InitiateCycleModal.tsx  InstallPWA.tsx  IrrigationScheduleCalculator.tsx  KeyboardShortcutsHelp.tsx  LazyImage.tsx  ListSkeletons.tsx  (+78 more)
client/src/contexts/: SidebarContext.tsx  ThemeContext.tsx
client/src/hooks/: useAppStateRefetch.ts  useHomeModals.ts  useNavBadges.ts  useNetworkStatus.ts  useOfflineSync.ts  useOnboardingTour.ts  useSimpleMode.ts  useTactileFeedback.ts
client/src/lib/: ads.ts  androidBackButton.ts  (+33 more)
docs/: ESP-DISPLAY-PROTOCOL.md  api-waitlist.md
docs/internal/: ORGANIC-CULTIVATION-RESEARCH.md  business-plan-scenarios.md  esp32-plants-menu-spec.md  help-screenshots-needed.md  todo.md
drizzle/: 0011_plain_wrecker.sql  0012_old_gladiator.sql  migrate-harvest-queue.sql  schema-create.sql  schema.ts
drizzle/meta/: 0011_snapshot.json  0012_snapshot.json  _journal.json
e2e/: smoke.spec.ts
esp32-display/: CODE_REVIEW.md  HANDOFF_CENAS_ESTUFA.md  PROVISIONING.md  README.md  REFACTOR_PLAN.md  STATUS.md  diagram.json  platformio.ini
esp32-display/scripts/: convert_icons.py
esp32-display/sim/: .gitignore  CMakeLists.txt  README.md  cultivo_ui.cpp  cultivo_ui.h  lv_conf.h  run.sh  sim_main.cpp
esp32-display/src/: cultivo_icons.c  cultivo_icons.h  cultivo_layout.h  cultivo_ui.cpp  cultivo_ui.h  hal_platform.h  main.cpp  main_lvgl.cpp  tuya_local.h
migrations/: add_password_hash.sql
scripts/: generate-pwa-assets.mjs  generate-store-assets-en.mjs  generate-store-assets.mjs
server/: admin-approve.ts  aiChat.test.ts  aiCrypto.ts  alertChecker.ts  alerts.dedup.test.ts  alerts.markAllAsSeen.test.ts  alerts.safetyLimits.test.ts  auth.logout.test.ts  backfill-esp-variants.mjs  backup.test.ts  check-user.ts  cleanup-orphan-groups.ts  cycles.clones-counter.test.ts  cycles.maintenance-cloning.test.ts  cycles.test.ts  dailyLogs.test.ts  db-account-delete.ts  db-auth.ts  db-migrate.mjs  db-reset.mjs  db.ts  diagnose-backup.ts  drop-strains-name-unique.ts  drying.tasks.test.ts  gamification.test.ts  gardenCall.test.ts  gardenMirror.test.ts  inspect-groups.ts  inspect-strains.ts  inspect-tent.ts  mysql-pool.ts  nutrientDiagnosis.test.ts  nutrientRecipe.test.ts  onboarding.wizard.test.ts  organicGating.test.ts  organicLibrary.test.ts  phase.transition.test.ts  planLimits.test.ts  planMigration.test.ts  plantGame.test.ts  (+27 more)
server/_core/: appleAuthRoutes.ts  auth.ts  authRoutes.ts  context.ts  dataApi.ts  dbMigrations.ts  deviceEvents.ts  deviceRoutes.ts  emailService.test.ts  emailService.ts  env.ts  imageGeneration.ts  index.ts  legalPages.ts  legalRoutes.ts  llm.ts  logger.ts  map.ts  notification.ts  oauth.ts  siteSettingsRoutes.ts  storage.ts  testHelpers.ts  testSetup.ts  vite.ts  voiceTranscription.ts  waitlistRoutes.test.ts  waitlistRoutes.ts  webhookRoutes.ts
server/cron/: dailyReminder.ts  incompleteRegistration.ts  tuyaPoller.ts  waitlistNurture.ts
server/lib/: gamification.ts  plantGame.ts  tuya.ts
server/routers/: _helpers.ts  aiChat.ts  alerts.ts  backup.ts  cycles.ts  dailyLogs.ts  device.ts  gamification.ts  garden.ts  plants.ts  tasks.ts  tents.ts  tuya.ts  userManagement.ts
server/scripts/: seed-logs.ts
(+121 files in other folders)
